manifests/base/openbao/openbao-build.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: openbao
    helm.sh/chart: openbao-0.26.1
  name: openbao
  namespace: openbao
spec:
  ports:
  - appProtocol: HTTPS
    name: https
    port: 8200
    targetPort: 8200
  - name: https-internal
    port: 8201
    targetPort: 8201
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/name: openbao
    component: server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: openbao-agent-injector
  name: openbao-agent-injector-svc
  namespace: openbao
spec:
  ports:
  - name: https
    port: 443
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/name: openbao-agent-injector
    component: webhook
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: openbao
    helm.sh/chart: openbao-0.26.1
    openbao-internal: "true"
  name: openbao-internal
  namespace: openbao
spec:
  clusterIP: None
  ports:
  - appProtocol: HTTPS
    name: https
    port: 8200
    targetPort: 8200
  - name: https-internal
    port: 8201
    targetPort: 8201
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/name: openbao
    component: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: openbao-agent-injector
    component: webhook
  name: openbao-agent-injector
  namespace: openbao
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: openbao
      app.kubernetes.io/name: openbao-agent-injector
      component: webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: openbao
        app.kubernetes.io/name: openbao-agent-injector
        component: webhook
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/instance: openbao
                app.kubernetes.io/name: openbao-agent-injector
                component: webhook
            topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - agent-inject
        - 2>&1
        image: docker.io/hashicorp/vault-k8s:1.7.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 5
        name: sidecar-injector
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        startupProbe:
          failureThreshold: 12
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
      hostNetwork: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 100
      serviceAccountName: openbao-agent-injector
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: openbao
  name: openbao
  namespace: openbao
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: openbao
      app.kubernetes.io/name: openbao
      component: server
  serviceName: openbao-internal
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: openbao
        app.kubernetes.io/name: openbao
        component: server
        helm.sh/chart: openbao-0.26.1
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/instance: openbao
                app.kubernetes.io/name: openbao
                component: server
            topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - "cp /openbao/config/extraconfig-from-values.hcl /tmp/storageconfig.hcl;\n[
          -n \"${HOST_IP}\" ] && sed -Ei \"s|HOST_IP|${HOST_IP?}|g\" /tmp/storageconfig.hcl;\n[
          -n \"${POD_IP}\" ] && sed -Ei \"s|POD_IP|${POD_IP?}|g\" /tmp/storageconfig.hcl;\n[
          -n \"${HOSTNAME}\" ] && sed -Ei \"s|HOSTNAME|${HOSTNAME?}|g\" /tmp/storageconfig.hcl;\n[
          -n \"${API_ADDR}\" ] && sed -Ei \"s|API_ADDR|${API_ADDR?}|g\" /tmp/storageconfig.hcl;\n[
          -n \"${TRANSIT_ADDR}\" ] && sed -Ei \"s|TRANSIT_ADDR|${TRANSIT_ADDR?}|g\"
          /tmp/storageconfig.hcl;\n[ -n \"${RAFT_ADDR}\" ] && sed -Ei \"s|RAFT_ADDR|${RAFT_ADDR?}|g\"
          /tmp/storageconfig.hcl;\n/usr/local/bin/docker-entrypoint.sh bao server
          -config=/tmp/storageconfig.hcl \n"
        command:
        - /bin/sh
        - -ec
        image: quay.io/openbao/openbao:2.5.1
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 5 && kill -SIGTERM $(pidof bao)
        name: openbao
        ports:
        - containerPort: 8200
          name: https
        - containerPort: 8201
          name: https-internal
        - containerPort: 8202
          name: https-rep
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -ec
            - bao status -tls-skip-verify
          failureThreshold: 2
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /openbao/config
          name: config
        - mountPath: /data
          name: openbao-data
        - mountPath: /var/run/secrets/openbao
          name: openbao-secrets
          readOnly: true
        - mountPath: /var/run/secrets/openbao-tls
          name: openbao-internal-tls
        - mountPath: /home/openbao
          name: home
      hostNetwork: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 100
      serviceAccountName: openbao
      terminationGracePeriodSeconds: 10
      volumes:
      - configMap:
          name: openbao-config
        name: config
      - name: openbao-data
        persistentVolumeClaim:
          claimName: openbao-data
      - name: openbao-secrets
        secret:
          secretName: openbao-secrets
      - name: openbao-internal-tls
        secret:
          secretName: openbao-internal-tls
      - emptyDir: {}
        name: home
  updateStrategy:
    type: OnDelete
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
  name: openbao-server-test
  namespace: openbao
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - |
      echo "Checking for sealed info in 'bao status' output"
      ATTEMPTS=10
      n=0
      until [ "$n" -ge $ATTEMPTS ]
      do
        echo "Attempt" $n...
        bao status -format yaml | grep -E '^sealed: (true|false)' && break
        n=$((n+1))
        sleep 5
      done
      if [ $n -ge $ATTEMPTS ]; then
        echo "timed out looking for sealed info in 'bao status' output"
        exit 1
      fi

      exit 0
    image: quay.io/openbao/openbao:2.5.1
    imagePullPolicy: IfNotPresent
    name: openbao-server-test
    volumeMounts:
    - mountPath: /data
      name: openbao-data
    - mountPath: /var/run/secrets/openbao
      name: openbao-secrets
      readOnly: true
    - mountPath: /var/run/secrets/openbao-tls
      name: openbao-internal-tls
  restartPolicy: Never
  volumes:
  - name: openbao-data
    persistentVolumeClaim:
      claimName: openbao-data
  - name: openbao-secrets
    secret:
      secretName: openbao-secrets
  - name: openbao-internal-tls
    secret:
      secretName: openbao-internal-tls
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: openbao-agent-injector
  name: openbao-agent-injector-cfg
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: ""
    service:
      name: openbao-agent-injector-svc
      namespace: openbao
      path: /mutate
  failurePolicy: Ignore
  matchPolicy: Exact
  name: vault.hashicorp.com
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - openbao-agent-injector
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
  sideEffects: None
  timeoutSeconds: 30
